--- a/SistemaBancarioWeb/TelaTransferencia/tranferenciaStyles.css
+++ b/SistemaBancarioWeb/TelaTransferencia/tranferenciaStyles.css
@@ -1,15 +1,34 @@
+/* Reset CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
 }
 
 header {
-    background-color: #007bff;
+    background-color: #333;
     color: #fff;
     padding: 20px 0;
     text-align: center;
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
 }
 
 form {
@@ -17,32 +36,35 @@ form {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 20px auto;
 }
 
-label {
-    font-weight: bold;
+form label {
+    display: block;
+    margin-bottom: 8px;
 }
 
-input[type="number"],
-input[type="text"],
-button {
+form input[type="number"],
+form input[type="text"],
+form button {
     margin-top: 10px;
     padding: 8px;
-    width: 100%;
+    width: calc(100% - 16px);
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-button {
-    background-color: #007bff;
+form button {
+    background-color: #333;
     color: #fff;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
-button:hover {
+form button:hover {
     background-color: #0056b3;
 }
 
