--- a/SistemaBancarioWeb/view/telaBanner.html
+++ b/SistemaBancarioWeb/view/telaBanner.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <div class="banner">
-        <img src="image.png" alt="Logo" style="width: 200px;">
+        <img src="../public/imgs/image.png" alt="Logo" style="width: 200px;">
         <div class="loader"></div>
         <h1>Carregando...</h1>
     </div>
@@ -44,7 +44,7 @@
     <script>
         // Função para redirecionar para a tela inicial após 3 segundos
         setTimeout(function() {
-            window.location.href = "../TelaInicial/index.html";
+            window.location.href = "index.html";
         }, 3000); // 3000 milissegundos = 3 segundos
     </script>
 </body>
